--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <main class="container">
       <div class="image">
         <img
-          src="/images/image-product-desktop.jpg"
+          src="images/image-product-desktop.jpg"
           alt=""
           class="image-desktop"
         />
         <img
-          src="/images/image-product-mobile.jpg"
+          src="images/image-product-mobile.jpg"
           alt=""
           class="image-mobile"
         />
@@ -45,7 +45,7 @@
           <p class="price-earlier">$169.99</p>
         </div>
         <button class="add">
-          <img src="/images/icon-cart.svg" alt="cart" /> Add to Cart
+          <img src="images/icon-cart.svg" alt="cart" /> Add to Cart
         </button>
       </div>
     </main>
